* code cleanup on main activity